--- a/V_ROOT_IOT/Base.lproj/Main.storyboard
+++ b/V_ROOT_IOT/Base.lproj/Main.storyboard
@@ -35,8 +35,14 @@
                                                 <constraint firstAttribute="height" constant="60" id="6ZO-RS-IgO"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New visit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Osd-ak-jB6">
+                                            <rect key="frame" x="84" y="11" width="220" height="29"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNN-Ao-QzG">
-                                            <rect key="frame" x="84" y="11" width="220" height="20.5"/>
+                                            <rect key="frame" x="84" y="40" width="220" height="29"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -45,14 +51,20 @@
                                     <constraints>
                                         <constraint firstItem="FNN-Ao-QzG" firstAttribute="leading" secondItem="7LS-TC-uRh" secondAttribute="trailing" constant="8" id="Dhp-uu-nhz"/>
                                         <constraint firstItem="7LS-TC-uRh" firstAttribute="centerY" secondItem="BSW-RY-36s" secondAttribute="centerY" id="Ejp-fC-YmB"/>
+                                        <constraint firstItem="Osd-ak-jB6" firstAttribute="top" secondItem="BSW-RY-36s" secondAttribute="topMargin" id="Ge1-Um-p3M"/>
+                                        <constraint firstItem="Osd-ak-jB6" firstAttribute="trailing" secondItem="BSW-RY-36s" secondAttribute="trailingMargin" id="IfP-br-nhz"/>
                                         <constraint firstItem="7LS-TC-uRh" firstAttribute="leading" secondItem="BSW-RY-36s" secondAttribute="leadingMargin" id="SO3-7I-Em7"/>
                                         <constraint firstItem="FNN-Ao-QzG" firstAttribute="trailing" secondItem="BSW-RY-36s" secondAttribute="trailingMargin" id="hWj-hP-D3B"/>
-                                        <constraint firstItem="FNN-Ao-QzG" firstAttribute="top" secondItem="BSW-RY-36s" secondAttribute="topMargin" id="uOQ-lF-vG3"/>
+                                        <constraint firstItem="FNN-Ao-QzG" firstAttribute="top" secondItem="Osd-ak-jB6" secondAttribute="bottom" id="krW-rx-Tzv"/>
+                                        <constraint firstItem="Osd-ak-jB6" firstAttribute="leading" secondItem="7LS-TC-uRh" secondAttribute="trailing" constant="8" id="kvY-rX-2tO"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="FNN-Ao-QzG" secondAttribute="bottom" id="xDp-Sr-02W"/>
+                                        <constraint firstItem="FNN-Ao-QzG" firstAttribute="height" secondItem="Osd-ak-jB6" secondAttribute="height" id="zrX-bq-WvN"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="cellImage" destination="7LS-TC-uRh" id="DGJ-cY-eoO"/>
                                     <outlet property="cellLabel" destination="FNN-Ao-QzG" id="Eo0-AB-siC"/>
+                                    <outlet property="titleLabel" destination="Osd-ak-jB6" id="DBj-Wc-4t0"/>
                                     <segue destination="Xhj-PA-s0T" kind="show" identifier="mySegue" id="t61-x9-ZGN"/>
                                 </connections>
                             </tableViewCell>
@@ -68,7 +80,7 @@
             </objects>
             <point key="canvasLocation" x="541.875" y="138.38028169014083"/>
         </scene>
-        <!--View Controller-->
+        <!--Visit-->
         <scene sceneID="3bq-UG-gBE">
             <objects>
                 <viewController id="Xhj-PA-s0T" customClass="ViewController" customModule="V_ROOT_IOT" customModuleProvider="target" sceneMemberID="viewController">
@@ -76,38 +88,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bZn-pJ-zbX">
-                                <rect key="frame" x="0.0" y="64" width="320" height="250"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="pSC-fi-hZE"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-jm-q3G">
-                                <rect key="frame" x="0.0" y="364" width="320" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-jm-q3G">
+                                <rect key="frame" x="8" y="309" width="304" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oZm-Ts-eWh">
+                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
+                                <color key="backgroundColor" red="0.83933775906735753" green="0.83933775906735753" blue="0.83933775906735753" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="lhZ-Kq-c4U"/>
+                                </constraints>
+                            </scrollView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You had a new visit at:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F7T-Fi-s25">
+                                <rect key="frame" x="0.0" y="280" width="320" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="se6-jm-q3G" firstAttribute="trailing" secondItem="kb6-38-NQm" secondAttribute="trailing" id="HCW-4w-Exx"/>
-                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" id="IOi-KC-jcl"/>
-                            <constraint firstItem="se6-jm-q3G" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" id="LPv-VH-d0q"/>
-                            <constraint firstItem="se6-jm-q3G" firstAttribute="top" secondItem="bZn-pJ-zbX" secondAttribute="bottom" constant="50" id="MTy-ER-vXn"/>
-                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="top" secondItem="kb6-38-NQm" secondAttribute="top" id="mAO-AG-vaN"/>
-                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="trailing" secondItem="kb6-38-NQm" secondAttribute="trailing" id="sgM-46-SZ6"/>
+                            <constraint firstItem="se6-jm-q3G" firstAttribute="top" secondItem="F7T-Fi-s25" secondAttribute="bottom" constant="8" id="BPc-aa-8VI"/>
+                            <constraint firstItem="F7T-Fi-s25" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" id="EcC-Yw-9hR"/>
+                            <constraint firstItem="oZm-Ts-eWh" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" id="FQR-3T-gl5"/>
+                            <constraint firstItem="se6-jm-q3G" firstAttribute="trailing" secondItem="kb6-38-NQm" secondAttribute="trailing" constant="-8" id="HCW-4w-Exx"/>
+                            <constraint firstItem="se6-jm-q3G" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" constant="8" id="LPv-VH-d0q"/>
+                            <constraint firstItem="oZm-Ts-eWh" firstAttribute="trailing" secondItem="kb6-38-NQm" secondAttribute="trailing" id="PsP-oJ-tat"/>
+                            <constraint firstItem="oZm-Ts-eWh" firstAttribute="top" secondItem="kb6-38-NQm" secondAttribute="top" id="aXQ-27-TtH"/>
+                            <constraint firstItem="F7T-Fi-s25" firstAttribute="top" secondItem="oZm-Ts-eWh" secondAttribute="bottom" constant="16" id="qGn-ZW-Tfb"/>
+                            <constraint firstItem="kb6-38-NQm" firstAttribute="trailing" secondItem="F7T-Fi-s25" secondAttribute="trailing" id="v5j-aJ-UcQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kb6-38-NQm"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Visit" id="dLc-PX-pFY">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="dmC-0h-LLQ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="share:" destination="Xhj-PA-s0T" id="aqM-aN-0e8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="secondImage" destination="bZn-pJ-zbX" id="ePj-fl-lhT"/>
+                        <outlet property="scrollViews" destination="oZm-Ts-eWh" id="FWc-Zd-h4F"/>
                         <outlet property="secondLabel" destination="se6-jm-q3G" id="OZZ-Go-jdN"/>
+                        <outlet property="titleLabel" destination="F7T-Fi-s25" id="6cu-jP-qat"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Nj-iM-QI5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1234.4000000000001" y="137.18140929535232"/>
+            <point key="canvasLocation" x="1275" y="138"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2Qy-mP-Ozi">
@@ -117,6 +148,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XGV-qk-aQ5">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.48209883928211694" green="0.11862588870311674" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -125,7 +157,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Edg-wJ-hcP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-164" y="139"/>
+            <point key="canvasLocation" x="-199" y="137"/>
         </scene>
     </scenes>
 </document>
